--- a/style.css
+++ b/style.css
@@ -45,3 +45,14 @@ hr {
 .btn-xl {
   padding: 1rem 2rem;
 }
+
+#question {
+  color: #e2dbdb;
+  width: 100%;
+}
+
+footer {
+  position: fixed;
+  bottom: 100;
+  left: 0;
+}
